# vanta

./: .gitignore  README.md
docs/: index.html  vanta-audit.html  vanta-core.html  vanta-handshake.html  vanta-handshake.txt  vanta-overview.html  vanta-overview.txt  vanta-reliability.html
spec/: PRD.md  vanta-audit.txt  vanta-audit.xml  vanta-core.txt  vanta-core.xml  vanta-handshake.xml  vanta-overview.xml  vanta-protocol-specification.md  vanta-protocol.xml  vanta-reliability.txt  vanta-reliability.xml
vanta-rs/: Cargo.toml  README.md
vanta-rs/crates/vanta-cli/: Cargo.toml
vanta-rs/crates/vanta-cli/src/: main.rs
vanta-rs/crates/vanta-crypto/: Cargo.toml
vanta-rs/crates/vanta-crypto/src/: lib.rs
vanta-rs/crates/vanta-daemon/: Cargo.toml
vanta-rs/crates/vanta-daemon/src/: lib.rs
vanta-rs/crates/vanta-registry/: Cargo.toml
vanta-rs/crates/vanta-registry/src/: lib.rs
vanta-rs/crates/vanta-runtime/: Cargo.toml
vanta-rs/crates/vanta-runtime/src/: lib.rs
vanta-rs/crates/vanta-storage/: Cargo.toml
vanta-rs/crates/vanta-storage/src/: lib.rs
vanta-rs/crates/vanta-transport/: Cargo.toml
vanta-rs/crates/vanta-transport/src/: lib.rs
vanta-rs/crates/vanta-wire/: Cargo.toml
vanta-rs/crates/vanta-wire/src/: error.rs  frame.rs  ids.rs  lib.rs  payloads.rs  tlv.rs
vanta-rs/docs/: cli.md  conformance-matrix.md  v0-wire-supplement.md
vanta-rs/examples/: daemon.toml  demo-registry.json  node-a.toml  node-b.toml
