[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/vanta-project/vanta-rs"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bitflags = "2.9.0"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.32", features = ["derive"] }
crc32c = "0.6.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-util = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.4"
proptest = "1.6.0"
rand = "0.9.0"
rand_core = "0.6.4"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-tungstenite = "0.26.2"
toml = "0.8.20"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

