[package]
name = "vanta-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true
vanta-crypto = { path = "../vanta-crypto" }
vanta-daemon = { path = "../vanta-daemon" }
vanta-registry = { path = "../vanta-registry" }
vanta-wire = { path = "../vanta-wire" }
