[package]
name = "vanta-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
vanta-crypto = { path = "../vanta-crypto" }
vanta-registry = { path = "../vanta-registry" }
vanta-runtime = { path = "../vanta-runtime" }
vanta-storage = { path = "../vanta-storage" }
vanta-transport = { path = "../vanta-transport" }
vanta-wire = { path = "../vanta-wire" }
