[package]
name = "vanta-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
vanta-wire = { path = "../vanta-wire" }
