[package]
name = "vanta-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
vanta-crypto = { path = "../vanta-crypto" }
vanta-registry = { path = "../vanta-registry" }
vanta-storage = { path = "../vanta-storage" }
vanta-wire = { path = "../vanta-wire" }
