[package]
name = "vanta-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
vanta-registry = { path = "../vanta-registry" }
vanta-wire = { path = "../vanta-wire" }

[dev-dependencies]
tempfile.workspace = true
