[package]
name = "vanta-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
vanta-runtime = { path = "../vanta-runtime" }
vanta-wire = { path = "../vanta-wire" }
